iter_language/tests/corpus/valid/queue-sqs-minimal.iter
queue sqs {
  queue_url = "https://sqs.us-east-1.amazonaws.com/123456789012/iter-signals"
  region = "us-east-1"
}

workspace local {
  base = "."
}

agent claude {
  mode = print
  command = "claude"
}

runner {
  agent = claude
  workspace = local
  queue = sqs
  continue_on_error = false
  behavior = wait
  prompt = "do the thing"
}
